--- a/staff/index.html
+++ b/staff/index.html
@@ -35,6 +35,7 @@
 							<h4>Please enter the credentials: </h4>
 						</td>
 					</tr>
+					<div hidden>
 					<tr>
 						<td style="width: 25%;">
 							User group:
@@ -43,6 +44,7 @@
 							<select id="roles" onchange="document.getElementById('login_type').innerText=this.value;" name="user_group"></select>
 						</td>
 					</tr>
+					</div>
 					<tr>
 						<td style="width: 25%;">
 							User name:
@@ -59,6 +61,7 @@
 							<input type="password" name="password" required>
 						</td>
 					</tr>
+					<div hidden>
 					<tr>
 						<td>
 							Task:
@@ -69,6 +72,7 @@
 							</select>
 						</td>
 					</tr>
+					</div>
 					<tr>
 						<td colspan="2">
 							<div class="media1"><div class="media1"><input id="submit_button" class="u1" style="margin-top: 0;" type="submit" name="Submit" value="Login"></div></div>
@@ -78,7 +82,7 @@
 			</form>
 
 
-			<section id="contents_page" class="cont1 gdoc_published_contents"></section>
+			<section id="contents_page" class="cont1 gdoc_published_contents">Hello</section>
 
 		</main>
 
