--- a/staff/index.html
+++ b/staff/index.html
@@ -41,7 +41,7 @@
 							User group:
 						</td>
 						<td>
-							<select id="roles" onchange="document.getElementById('login_type').innerText=this.value;" name="user_group"></select>
+							<select hidden id="roles" onchange="document.getElementById('login_type').innerText=this.value;" name="user_group"></select>
 						</td>
 					</tr>
 					</div>
@@ -67,7 +67,7 @@
 							Task:
 						</td>
 						<td>
-							<select onchange="if(this.value=='delete'){this.parentElement.parentElement.insertAdjacentHTML('afterend','<tr id=\'ref_no\'><td>Reference no.:</td><td><input type=\'text\' name=\'ref_no\'></td></tr>');document.getElementById('submit_button').value='Delete notice';}else{document.getElementById('ref_no').outerHTML='';document.getElementById('submit_button').value='Submit';}" name="task">
+							<select hidden onchange="if(this.value=='delete'){this.parentElement.parentElement.insertAdjacentHTML('afterend','<tr id=\'ref_no\'><td>Reference no.:</td><td><input type=\'text\' name=\'ref_no\'></td></tr>');document.getElementById('submit_button').value='Delete notice';}else{document.getElementById('ref_no').outerHTML='';document.getElementById('submit_button').value='Submit';}" name="task">
 								<option value="add">Add notice</option>
 							</select>
 						</td>
