--- a/staff/index.html
+++ b/staff/index.html
@@ -57,11 +57,11 @@
 						</td>
 					</tr>
 				</table>
-							<select hidden id="roles" onchange="document.getElementById('login_type').innerText=this.value;" name="user_group"></select>
+				<select hidden id="roles" onchange="document.getElementById('login_type').innerText=this.value;" name="user_group"></select>
 			</form>
 
 
-			<section id="contents_page" class="cont1 gdoc_published_contents">Hello</section>
+			<section id="contents_page" class="cont1 gdoc_published_contents"></section>
 			<select hidden onchange="if(this.value=='delete'){this.parentElement.parentElement.insertAdjacentHTML('afterend','<tr id=\'ref_no\'><td>Reference no.:</td><td><input type=\'text\' name=\'ref_no\'></td></tr>');document.getElementById('submit_button').value='Delete notice';}else{document.getElementById('ref_no').outerHTML='';document.getElementById('submit_button').value='Submit';}" name="task">
 				<option value="add">Add notice</option>
 			</select>
