--- a/staff/index.html
+++ b/staff/index.html
@@ -28,7 +28,7 @@
 		</header>
 		<main class="cont1">
 
-			<form class="media1" onsubmit='event.preventDefault();form_wait(event.target);form_JSON_send(event.target)' class="u1" data-form-submit-target="https://script.google.com/macros/s/AKfycbwotnrn5vDVzCWhSsWIPE1apYuPyxEIjd39lBtxeT0XqGM0_pPqJuKBICHcB1_aiQ_cbg/exec" data-show-id="no" data-custom-JSON-to-send-string='{"gscript_callback_function": "staffPage"}' style="display: none;" id="login_form">
+			<form class="media1" onsubmit='event.preventDefault();form_wait(event.target);form_JSON_send(event.target)' class="u1" data-form-submit-target="https://script.google.com/macros/s/AKfycbwotnrn5vDVzCWhSsWIPE1apYuPyxEIjd39lBtxeT0XqGM0_pPqJuKBICHcB1_aiQ_cbg/exec" data-show-id="no" data-custom-JSON-to-send-string='{"fn": "staffPage"}' style="display: none;" id="login_form">
 				<table class="u1">
 					<tr>
 						<td colspan="2">
