--- a/postnotice/index.html
+++ b/postnotice/index.html
@@ -64,7 +64,7 @@
 							Task:
 						</td>
 						<td>
-							<select onchange="if(this.value=='delete'){this.parentElement.parentElement.insertAdjacentHTML('afterend','<tr id=\'ref_no\'><td>Reference no.:</td><td><input type=\'text\' name=\'ref_no\'></td></tr>');document.getElementById('submit_button').value='Delete notice';}else{document.getElementById('ref_no').outerHTML='';document.getElementById('submit_button').value='Submit';}" name="task">
+							<select onchange="if(this.value=='delete'){this.parentElement.parentElement.insertAdjacentHTML('afterend','<tr id=\'ref_no\'><td>Reference no.:</td><td><input type=\'text\' name=\'ref_no\' placeholder=\'HOD/1\' required></td></tr>');document.getElementById('submit_button').value='Delete notice';}else{document.getElementById('ref_no').outerHTML='';document.getElementById('submit_button').value='Submit';}" name="task">
 								<option value="add">Add notice</option>
 								<option value="delete">Delete notice</option>
 							</select>
