--- a/postnotice/index.html
+++ b/postnotice/index.html
@@ -139,6 +139,7 @@
 					</tr>
 				</table>
 			</form>
+			<section id="myTasks" class="cont1"></section>
 			<section id="contents_page" class="cont1 gdoc_published_contents"></section>
 
 		</main>
@@ -181,6 +182,7 @@
 				{
 					document.getElementById('notice_form').style.display="revert";
 					request("https://docs.google.com/document/d/e/2PACX-1vRsBaCi0cOGgO6cHJWORkhvZXds_JQN1227KHSd_TxXcaByTD3M-53RFnDPKzYF3klQV_CNilYOsmxU/pub?embedded=true","putin_paste",document.getElementById("contents_page"),"request_gdoc_published_inline_contents");
+					request("https://script.google.com/macros/s/AKfycbzy53ifIUTm2YNc_T_uv1Y0RV0PaLlE8i00V2DTvzBFCuG1Q8ocrvguw4mKUfkiykJSHA/exec?fn=myTargets&Name=Mahesh Bhong","putin_paste",document.getElementById("myTasks"));
 				}
 				window.addEventListener("beforeunload",function()
 				{
