--- a/mytasks/index.html
+++ b/mytasks/index.html
@@ -1,141 +1,361 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>Academics for you</title>
-		<link rel="stylesheet" type="text/css" href="/css/variables.css">
-		<link rel="stylesheet" type="text/css" href="https://lib.ameonlinesolutions.com/design/layout.css">
-		<link rel="stylesheet" type="text/css" href="https://lib.ameonlinesolutions.com/design/default.css">
-		<link rel="stylesheet" type="text/css" href="https://lib.ameonlinesolutions.com/elements/nav/nav.css">
-		<link rel="stylesheet" type="text/css" href="https://lib.ameonlinesolutions.com/elements/table/table.css">
-		<link rel="stylesheet" type="text/css" href="https://lib.ameonlinesolutions.com/elements/form/form.css">
-		<link rel="stylesheet" type="text/css" href="https://lib.ameonlinesolutions.com/elements/button/button.css">
-		<link rel="stylesheet" type="text/css" href="https://lib.ameonlinesolutions.com/elements/media/img/in-page-images.css">
-		<link rel="stylesheet" type="text/css" href="https://lib.ameonlinesolutions.com/elements/media/img/background-images.css">
-		<link rel="stylesheet" type="text/css" href="https://lib.ameonlinesolutions.com/utils/putins/putins.css">
-		<link rel="stylesheet" type="text/css" href="https://lib.ameonlinesolutions.com/elements/media/media.css">
-		<link rel="stylesheet" type="text/css" href="https://lib.ameonlinesolutions.com/design/keyframes/plain.css">
-		<link rel="stylesheet" type="text/css" href="https://lib.ameonlinesolutions.com/elements/iframe/iframe-svg.css">
-		<link rel="stylesheet" type="text/css" href="https://lib.ameonlinesolutions.com/svg/svg.css">
-		<link rel="stylesheet" type="text/css" href="/rtf/trumbowyg.min.css">
-		<link rel="stylesheet" type="text/css" href="/rtf/trumbowyg.colors.min.css">
-		<!-- https://lib.ameonlinesolutions.com -->
-	</head>
-	<body>
-		<header class="cont1" style="margin: 0;">
-			<img class="cont1" src="/images/logo.jpg">
-		</header>
-		<main class="cont1">
+    <head>
+        <meta charset="utf-8" />
+        <meta
+            name="viewport"
+            content="width=device-width, initial-scale=1.0"
+        />
+        <title>Academics for you</title>
+        <link
+            rel="stylesheet"
+            type="text/css"
+            href="/css/variables.css"
+        />
+        <link
+            rel="stylesheet"
+            type="text/css"
+            href="/website-modules/design/layout.css"
+        />
+        <link
+            rel="stylesheet"
+            type="text/css"
+            href="/website-modules/design/default.css"
+        />
+        <link
+            rel="stylesheet"
+            type="text/css"
+            href="/website-modules/elements/nav/nav.css"
+        />
+        <link
+            rel="stylesheet"
+            type="text/css"
+            href="/website-modules/elements/table/table.css"
+        />
+        <link
+            rel="stylesheet"
+            type="text/css"
+            href="/website-modules/elements/form/form.css"
+        />
+        <link
+            rel="stylesheet"
+            type="text/css"
+            href="/website-modules/elements/button/button.css"
+        />
+        <link
+            rel="stylesheet"
+            type="text/css"
+            href="/website-modules/elements/media/img/in-page-images.css"
+        />
+        <link
+            rel="stylesheet"
+            type="text/css"
+            href="/website-modules/elements/media/img/background-images.css"
+        />
+        <link
+            rel="stylesheet"
+            type="text/css"
+            href="/website-modules/utils/putins/putins.css"
+        />
+        <link
+            rel="stylesheet"
+            type="text/css"
+            href="/website-modules/elements/media/media.css"
+        />
+        <link
+            rel="stylesheet"
+            type="text/css"
+            href="/website-modules/design/keyframes/plain.css"
+        />
+        <link
+            rel="stylesheet"
+            type="text/css"
+            href="/website-modules/elements/iframe/iframe-svg.css"
+        />
+        <link
+            rel="stylesheet"
+            type="text/css"
+            href="/website-modules/svg/svg.css"
+        />
+        <link
+            rel="stylesheet"
+            type="text/css"
+            href="/rtf/trumbowyg.min.css"
+        />
+        <link
+            rel="stylesheet"
+            type="text/css"
+            href="/rtf/trumbowyg.colors.min.css"
+        />
+        <!-- /website-modules -->
+    </head>
+    <body>
+        <header
+            class="cont1"
+            style="margin: 0"
+        >
+            <img
+                class="cont1"
+                src="/images/logo.jpg"
+            />
+        </header>
+        <main class="cont1">
+            <form
+                class="media1"
+                onsubmit="event.preventDefault();form_wait(event.target);form_JSON_send(event.target)"
+                class="u1"
+                data-form-submit-target="https://script.google.com/macros/s/AKfycbzwun7oDW9cDky9JUiWsJdctiqb1tiBfk2rbY-_bHpJ6UuwX8h-IEEikmcMO8qv3eDE/exec"
+                data-show-id="no"
+                data-custom-JSON-to-send-string='{"gscript_callback_function": "login_or_delete"}'
+                style="display: none"
+                id="login_form"
+            >
+                <table class="u1">
+                    <tr>
+                        <td colspan="2">
+                            <h4>
+                                Please
+                                enter
+                                the
+                                credentials:
+                            </h4>
+                        </td>
+                    </tr>
+                    <tr
+                        style="
+                            display: none;
+                        "
+                    >
+                        <td
+                            style="
+                                width: 25%;
+                            "
+                        >
+                            User group:
+                        </td>
+                        <td>
+                            <select
+                                id="roles"
+                                name="user_group"
+                            >
+                                <option
+                                    value="Faculty"
+                                    selected
+                                >
+                                    Faculty
+                                </option>
+                            </select>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td
+                            style="
+                                width: 25%;
+                            "
+                        >
+                            User name:
+                        </td>
+                        <td>
+                            <input
+                                type="text"
+                                name="username"
+                                required
+                            />
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            Password:
+                        </td>
+                        <td>
+                            <input
+                                type="password"
+                                name="password"
+                                required
+                            />
+                        </td>
+                    </tr>
+                    <tr
+                        style="
+                            display: none;
+                        "
+                    >
+                        <td>Task:</td>
+                        <td>
+                            <select
+                                name="task"
+                            >
+                                <option
+                                    value="add"
+                                    selected
+                                >
+                                    Add
+                                    notice
+                                </option>
+                            </select>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td colspan="2">
+                            <div
+                                class="media1"
+                            >
+                                <div
+                                    class="media1"
+                                >
+                                    <input
+                                        id="submit_button"
+                                        class="u1"
+                                        style="
+                                            margin-top: 0;
+                                        "
+                                        type="submit"
+                                        name="Submit"
+                                        value="Login"
+                                    />
+                                </div>
+                            </div>
+                        </td>
+                    </tr>
+                </table>
+            </form>
 
-			<form class="media1" onsubmit='event.preventDefault();form_wait(event.target);form_JSON_send(event.target)' class="u1" data-form-submit-target="https://script.google.com/macros/s/AKfycbzwun7oDW9cDky9JUiWsJdctiqb1tiBfk2rbY-_bHpJ6UuwX8h-IEEikmcMO8qv3eDE/exec" data-show-id="no" data-custom-JSON-to-send-string='{"gscript_callback_function": "login_or_delete"}' style="display: none;" id="login_form">
-				<table class="u1">
-					<tr>
-						<td colspan="2">
-							<h4>Please enter the credentials: </h4>
-						</td>
-					</tr>
-					<tr style="display:none;">
-						<td style="width: 25%;">
-							User group:
-						</td>
-						<td>
-							<select id="roles" name="user_group">
-								<option value="Faculty" selected>Faculty</option>
-							</select>
-						</td>
-					</tr>
-					<tr>
-						<td style="width: 25%;">
-							User name:
-						</td>
-						<td>
-							<input type="text" name="username" required>
-						</td>
-					</tr>
-					<tr>
-						<td>
-							Password:
-						</td>
-						<td>
-							<input type="password" name="password" required>
-						</td>
-					</tr>
-					<tr style="display:none;">
-						<td>
-							Task:
-						</td>
-						<td>
-							<select name="task">
-								<option value="add" selected>Add notice</option>
-							</select>
-						</td>
-					</tr>
-					<tr>
-						<td colspan="2">
-							<div class="media1"><div class="media1"><input id="submit_button" class="u1" style="margin-top: 0;" type="submit" name="Submit" value="Login"></div></div>
-						</td>
-					</tr>
-				</table>
-			</form>
+            <section
+                id="myTasks"
+                class="cont1"
+            ></section>
+            <section
+                id="contents_page"
+                class="cont1 gdoc_published_contents"
+            ></section>
+        </main>
 
-			<section id="myTasks" class="cont1"></section>
-			<section id="contents_page" class="cont1 gdoc_published_contents"></section>
+        <footer
+            class="cont1"
+            id="contact"
+        >
+            <span
+                style="
+                    float: right;
+                    float: right;
+                    padding-top: 1%;
+                    padding-right: 1%;
+                "
+                >Developed by Dr.
+                Vinayak Kale</span
+            >
+        </footer>
+    </body>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script
+        src="/rtf/trumbowyg.min.js"
+        type="text/javascript"
+    ></script>
+    <script
+        src="/rtf/trumbowyg.colors.min.js"
+        type="text/javascript"
+    ></script>
+    <script
+        src="/website-modules/includes/request/request.js"
+        type="text/javascript"
+    ></script>
+    <script
+        src="/website-modules/includes/request/google.js"
+        type="text/javascript"
+    ></script>
+    <script
+        src="/website-modules/design/default.js"
+        type="text/javascript"
+    ></script>
+    <script
+        src="/website-modules/elements/media/img/background-images.js"
+        type="text/javascript"
+    ></script>
+    <script
+        src="/website-modules/elements/button/button.js"
+        type="text/javascript"
+    ></script>
+    <script
+        src="/website-modules/elements/form/form.js"
+        type="text/javascript"
+    ></script>
+    <script
+        src="/website-modules/utils/putins/putins.js"
+        type="text/javascript"
+    ></script>
+    <script
+        src="/website-modules/utils/putins/google.js"
+        type="text/javascript"
+    ></script>
+    <script
+        src="/website-modules/svg/svg.js"
+        type="text/javascript"
+    ></script>
+    <script
+        src="/website-modules/elements/nav/nav.js"
+        type="text/javascript"
+    ></script>
 
-		</main>
+    <script type="text/javascript">
+        if (sessionStorage) {
+            if (
+                sessionStorage.getItem(
+                    "role"
+                ) &&
+                sessionStorage.getItem(
+                    "rolekey"
+                )
+            ) {
+                document.getElementById(
+                    "notice_form"
+                ).style.display =
+                    "revert"
+            } else {
+                document.getElementById(
+                    "login_form"
+                ).style.display =
+                    "revert"
+            }
+        } else {
+            document.getElementById(
+                "login_form"
+            ).style.display = "revert"
+        }
+        function form_show_next() {
+            request(
+                "https://docs.google.com/document/d/e/2PACX-1vRsBaCi0cOGgO6cHJWORkhvZXds_JQN1227KHSd_TxXcaByTD3M-53RFnDPKzYF3klQV_CNilYOsmxU/pub?embedded=true",
+                "putin_paste",
+                document.getElementById(
+                    "contents_page"
+                ),
+                "request_gdoc_published_inline_contents"
+            )
+            request(
+                "https://script.google.com/macros/s/AKfycbzy53ifIUTm2YNc_T_uv1Y0RV0PaLlE8i00V2DTvzBFCuG1Q8ocrvguw4mKUfkiykJSHA/exec?fn=myTargets&Name=" +
+                    (sessionStorage
+                        ? sessionStorage.username
+                        : ""),
+                "putin_paste",
+                document.getElementById(
+                    "myTasks"
+                ),
+                "request_response"
+            )
+        }
+        window.addEventListener(
+            "beforeunload",
+            function () {
+                sessionStorage.clear()
+            }
+        )
+    </script>
 
-		<footer class="cont1" id="contact">
-			<span style="float: right;float: right;padding-top: 1%;padding-right: 1%;">Developed by Dr. Vinayak Kale</span>
-		</footer>
-	</body>
-	<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-	<script src="/rtf/trumbowyg.min.js" type="text/javascript"></script>
-	<script src="/rtf/trumbowyg.colors.min.js" type="text/javascript"></script>
-	<script src="https://lib.ameonlinesolutions.com/includes/request/request.js" type="text/javascript"></script>
-	<script src="https://lib.ameonlinesolutions.com/includes/request/google.js" type="text/javascript"></script>
-	<script src="https://lib.ameonlinesolutions.com/design/default.js" type="text/javascript"></script>
-	<script src="https://lib.ameonlinesolutions.com/elements/media/img/background-images.js" type="text/javascript"></script>
-	<script src="https://lib.ameonlinesolutions.com/elements/button/button.js" type="text/javascript"></script>
-	<script src="https://lib.ameonlinesolutions.com/elements/form/form.js" type="text/javascript"></script>
-	<script src="https://lib.ameonlinesolutions.com/utils/putins/putins.js" type="text/javascript"></script>
-	<script src="https://lib.ameonlinesolutions.com/utils/putins/google.js" type="text/javascript"></script>
-	<script src="https://lib.ameonlinesolutions.com/svg/svg.js" type="text/javascript"></script> 
-	<script src="https://lib.ameonlinesolutions.com/elements/nav/nav.js" type="text/javascript"></script> 
-
-			<script type="text/javascript">
-				if(sessionStorage)
-				{
-					if(sessionStorage.getItem("role") && sessionStorage.getItem("rolekey"))
-					{
-						document.getElementById('notice_form').style.display="revert";
-					}
-					else
-					{
-						document.getElementById('login_form').style.display="revert";
-					}
-				}
-				else
-				{
-					document.getElementById('login_form').style.display="revert";
-				}
-				function form_show_next()
-				{
-					request("https://docs.google.com/document/d/e/2PACX-1vRsBaCi0cOGgO6cHJWORkhvZXds_JQN1227KHSd_TxXcaByTD3M-53RFnDPKzYF3klQV_CNilYOsmxU/pub?embedded=true","putin_paste",document.getElementById("contents_page"),"request_gdoc_published_inline_contents");
-					request("https://script.google.com/macros/s/AKfycbzy53ifIUTm2YNc_T_uv1Y0RV0PaLlE8i00V2DTvzBFCuG1Q8ocrvguw4mKUfkiykJSHA/exec?fn=myTargets&Name="+(sessionStorage ? sessionStorage.username : ""),"putin_paste",document.getElementById("myTasks"),"request_response");
-				}
-				window.addEventListener("beforeunload",function()
-				{
-					sessionStorage.clear();
-				});
-			</script>
-
-	<style type="text/css">
-		#notice_contents *
-		{
-			list-style-type: revert;
-			margin: revert;
-			color: revert;
-			background-color: revert;
-		}
-	</style>
+    <style type="text/css">
+        #notice_contents * {
+            list-style-type: revert;
+            margin: revert;
+            color: revert;
+            background-color: revert;
+        }
+    </style>
 </html>
