--- a/Testing/index.html
+++ b/Testing/index.html
@@ -128,8 +128,7 @@
                 onchange="if(this.value=='delete'){this.parentElement.parentElement.insertAdjacentHTML('afterend','<tr id=\'ref_no\'><td>Reference no.:</td><td><input type=\'text\' name=\'ref_no\' placeholder=\'HOD/1\' required></td></tr>');document.getElementById('submit_button').value='Delete notice';}else{document.getElementById('ref_no').outerHTML='';document.getElementById('submit_button').value='Submit';}"
                 name="task"
               >
-                <option value="add">Add notice</option>
-                <option value="delete">Delete notice</option>
+                <option value="Edit_Website_Layout">Edit Website Layout</option>
               </select>
             </td>
           </tr>
@@ -156,8 +155,8 @@
         class="media1"
         onsubmit="event.preventDefault();form_wait(event.target);form_JSON_send(event.target)"
         class="u1"
-        data-form-submit-target="https://script.google.com/macros/s/AKfycbz-Bg89XVc3A79ZF0B5TdFmDvDLSBZbCu2sNe19PBeFIbtLt-hsuX5kJwxdZnBv17YT/exec"
-        data-custom-JSON-to-send-string='{"gscript_callback_function": "notice_post"}'
+        data-form-submit-target="https://script.google.com/macros/s/AKfycbzy53ifIUTm2YNc_T_uv1Y0RV0PaLlE8i00V2DTvzBFCuG1Q8ocrvguw4mKUfkiykJSHA/exec"
+        data-custom-JSON-to-send-string='{"fn": "editWebsiteLayout"}'
         data-show-id="no"
         data-send-creds="yes"
         id="notice_form"
