--- a/Testing/index.html
+++ b/Testing/index.html
@@ -87,8 +87,8 @@
         class="media1"
         onsubmit="event.preventDefault();form_wait(event.target);form_JSON_send(event.target)"
         class="u1"
-        data-form-submit-target="https://script.google.com/macros/s/AKfycbz-Bg89XVc3A79ZF0B5TdFmDvDLSBZbCu2sNe19PBeFIbtLt-hsuX5kJwxdZnBv17YT/exec"
-        data-custom-JSON-to-send-string='{"gscript_callback_function": "login_or_delete"}'
+        data-form-submit-target="https://script.google.com/macros/s/AKfycbzy53ifIUTm2YNc_T_uv1Y0RV0PaLlE8i00V2DTvzBFCuG1Q8ocrvguw4mKUfkiykJSHA/exec"
+        data-custom-JSON-to-send-string='{"fn": "editWebsiteLayout"}'
         data-show-id="no"
         style="display: none"
         id="login_form"
