--- a/Testing/index.html
+++ b/Testing/index.html
@@ -102,7 +102,7 @@
           <tr>
             <td style="width: 25%">User group:</td>
             <td>
-              <select
+              <select hidden
                 id="roles"
                 onchange="document.getElementById('login_type').innerText=this.value;"
                 name="user_group"
@@ -124,7 +124,7 @@
           <tr>
             <td>Task:</td>
             <td>
-              <select
+              <select hidden
                 onchange="if(this.value=='delete'){this.parentElement.parentElement.insertAdjacentHTML('afterend','<tr id=\'ref_no\'><td>Reference no.:</td><td><input type=\'text\' name=\'ref_no\' placeholder=\'HOD/1\' required></td></tr>');document.getElementById('submit_button').value='Delete notice';}else{document.getElementById('ref_no').outerHTML='';document.getElementById('submit_button').value='Submit';}"
                 name="task"
               >
