--- a/Testing/index.html
+++ b/Testing/index.html
@@ -100,9 +100,9 @@
             </td>
           </tr>
           <tr>
-            <td style="width: 25%"></td>
+            <td style="width: 25%">User Group:</td>
             <td>
-              <select hidden
+              <select
                 id="roles"
                 onchange="document.getElementById('login_type').innerText=this.value;"
                 name="user_group"
@@ -122,9 +122,9 @@
             </td>
           </tr>
           <tr>
-            <td></td>
+            <td>Task:</td>
             <td>
-              <select hidden
+              <select
                 onchange="if(this.value=='delete'){this.parentElement.parentElement.insertAdjacentHTML('afterend','<tr id=\'ref_no\'><td>Reference no.:</td><td><input type=\'text\' name=\'ref_no\' placeholder=\'HOD/1\' required></td></tr>');document.getElementById('submit_button').value='Delete notice';}else{document.getElementById('ref_no').outerHTML='';document.getElementById('submit_button').value='Submit';}"
                 name="task"
               >
